--- a/contribution.html
+++ b/contribution.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/Explorium Favicon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This page is Exploriums homepage">
+    <meta name="description" content="This page is Exploriums supportpage">
     <script src="https://kit.fontawesome.com/e0e8f3b90b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/contribution.css">
 </head>
