DRY'ed up navbar

--- a/index.html
+++ b/index.html
@@ -2,26 +2,23 @@
 <html lang="en">
 
 <head>
-    <title>Explorium Science Museum</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/Explorium Favicon.png">
     <meta charset="UTF-8">
+    <title>Explorium Science Museum</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This page is Exploriums homepage">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/Explorium Favicon.png">
     <script src="https://kit.fontawesome.com/e0e8f3b90b.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
-
-
 <body>
-
-
 
     <header>
         <nav>
             <ul class="navbar">
                 <li class="logo"><a href="index.html"><img src="images/logo/Explorium_logo.png"
-                            alt="A minimalistic black-and-white icon of a rocket launching, with an atom-like structure encircling it, symbolizing science, space exploration and innovation."></a>
+                            alt="A minimalistic icon of a rocket launching."></a>
                 </li>
                 <input type="checkbox" id="check">
                 <span class="menu">
@@ -36,11 +33,6 @@
         </nav>
     </header>
 
-
-
-
-
-
     <main>
 
         <!-- Explore with us -->
@@ -48,7 +40,7 @@
         <section>
             <div class="explore">
                 <img src="images/webimg/scientific-2040795_1280-new-min.png"
-                    alt="A scientist wearing safety glasses and a lab coat examines a large, futuristic-looking metallic chamber with multiple circular openings in a dimly lit laboratory. The scene is illuminated with a blue-purple glow. Above, the `Explorium Science Museum´ logo is displayed, featuring a stylized rocket and atomic design.">
+                    alt="A scientist examines a large, futuristic-looking metallic chamber">
                 <div class="book">
                     <h2></h2>
                 </div>
@@ -62,10 +54,10 @@
 
         <section class="info-buttons">
             <div>
-                <a href="contact.html"> <button class="openinghours-btn">Opening <br> hours</button></a>
+                <a class="openinghours-btn" href="contact.html">Opening hours</a>
             </div>
             <div>
-                <a href="exhibitions.html"> <button class="events-btn">Events</button></a>
+                <a class="events-btn" href="exhibitions.html">Events</a>
             </div>
         </section>
 
@@ -81,25 +73,21 @@
                 <h5>Launchpad to the stars: The Engineering of Space Travel</h5>
             </div>
             <div class="discover">
-                <a href="exhibitions.html"> <button class="discover-btn">Discover More</button></a>
+                <a class="btn btn--ghost link-btn" href="exhibitions.html">Discover More</a>
             </div>
-
         </section>
-
-
-
 
         <!-- Rob the robot -->
 
         <section class="rob">
             <a href="exhibitions.html"> <img src="images/webimg/maximalfocus-eZWGK5sIiBM-unsplash_edited-min.png"
-                    alt="Hondas ASIMO humanoid robot waves, standing in a modern glass-walled space. A sign above reads `Meet Rob the Robot`">
+                    alt="Hondas ASIMO humanoid robot waves. A sign above reads `Meet Rob the Robot`">
             </a>
             <div>
                 <p>Get the chance to greet Rob</p>
             </div>
             <div class="tickets">
-                <a href="#"> <button class="tickets-btn">GET TICKETS <br> HERE</button></a>
+                <a class="tickets-btn" href="#">GET TICKETS HERE</a>
                 <hr>
         </section>
 
@@ -108,7 +96,7 @@
         <section class="about-us">
             <div>
                 <img src="images/logo/Explorium_colorful_logo.png"
-                    alt="A minimalistic blue-gradient icon of a rocket launching, with an atom-like structure encircling it, symbolizing science, space exploration and innovation.">
+                    alt="A minimalistic blue-gradient icon of a rocket launching">
 
 
             </div>
@@ -136,10 +124,10 @@
             </div>
             <div class="come-visit">
                 <img src="images/logo/Explorium_colorful_logo.png"
-                    alt="A minimalistic blue-gradient icon of a rocket launching, with an atom-like structure encircling it, symbolizing science, space exploration and innovation.">
+                    alt="A minimalistic blue-gradient icon of a rocket launching">
                 <h2>Come visit us!</h2>
                 <img src="images/logo/Explorium_colorful_logo.png"
-                    alt="A minimalistic blue-gradient icon of a rocket launching, with an atom-like structure encircling it, symbolizing science, space exploration and innovation.">
+                    alt="A minimalistic blue-gradient icon of a rocket launching.">
             </div>
         </section>
 
