--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This page is Exploriums contactpage">
     <script src="https://kit.fontawesome.com/e0e8f3b90b.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/contact.css">
 </head>
 
