DRY'ed up footer and styles.css

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <header>
         <nav>
             <ul class="navbar">
-                <li class="logo"><a href="index.html"><img src="images/logo/Explorium_logo.png"
-                            alt="A minimalistic icon of a rocket launching."></a>
+                <li class="logo"><a href="index.html">
+                        <img src="images/logo/Explorium_logo.png" alt="Explorium logo. A rocket launching."></a>
                 </li>
                 <input type="checkbox" id="check">
                 <span class="menu">
@@ -73,9 +73,13 @@
                 <h5>Launchpad to the stars: The Engineering of Space Travel</h5>
             </div>
             <div class="discover">
-                <a class="btn btn--ghost link-btn" href="exhibitions.html">Discover More</a>
+                <a href="exhibitions.html"> <button class="discover-btn">Discover More</button></a>
             </div>
+
         </section>
+
+
+
 
         <!-- Rob the robot -->
 
@@ -87,7 +91,7 @@
                 <p>Get the chance to greet Rob</p>
             </div>
             <div class="tickets">
-                <a class="tickets-btn" href="#">GET TICKETS HERE</a>
+                <a href="#"> <button class="tickets-btn">GET TICKETS <br> HERE</button></a>
                 <hr>
         </section>
 
